Restructured controllers and services for readability and added comments